added skills icons

--- a/index.html
+++ b/index.html
@@ -57,37 +57,62 @@
 
   <!-- category wrapper -->
   <div class="skills-categories">
-
-    <!-- ───────── Languages ───────── -->
     <div class="skill-category">
       <h3>Languages</h3>
-      <div class="skill-grid" id="lang-skills"></div>
+      <div class="skill-grid">
+        <div class="skill-logo"><img src="assets/skills/python-original.svg" alt="Python"><span class="skill-tooltip">Python</span></div>
+        <div class="skill-logo"><img src="assets/skills/java-original.svg" alt="Java"><span class="skill-tooltip">Java</span></div>
+        <div class="skill-logo"><img src="assets/skills/javascript-original.svg" alt="JavaScript"><span class="skill-tooltip">JavaScript</span></div>
+        <div class="skill-logo"><img src="assets/skills/c-original.svg" alt="C"><span class="skill-tooltip">C</span></div>
+        <div class="skill-logo"><img src="assets/skills/csharp-original.svg" alt="C#"><span class="skill-tooltip">C#</span></div>
+        <div class="skill-logo"><img src="assets/skills/sqlite-original.svg" alt="SQL"><span class="skill-tooltip">SQL</span></div>
+      </div>
     </div>
-
-    <!-- ───────── Frameworks & Tools ───────── -->
     <div class="skill-category">
-      <h3>Frameworks&nbsp;&amp;&nbsp;Tools</h3>
-      <div class="skill-grid" id="tool-skills"></div>
+      <h3>Frameworks &amp; Tools</h3>
+      <div class="skill-grid">
+        <div class="skill-logo"><img src="assets/skills/react-original.svg" alt="React"><span class="skill-tooltip">React</span></div>
+        <div class="skill-logo"><img src="assets/skills/react-original.svg" alt="React Native"><span class="skill-tooltip">React Native</span></div>
+        <div class="skill-logo"><img src="assets/skills/angular.svg" alt="Angular"><span class="skill-tooltip">Angular</span></div>
+        <div class="skill-logo"><img src="assets/skills/flask-original.svg" alt="Flask"><span class="skill-tooltip">Flask</span></div>
+        <div class="skill-logo"><img src="assets/skills/docker-original.svg" alt="Docker"><span class="skill-tooltip">Docker</span></div>
+        <div class="skill-logo"><img src="assets/skills/unity-original.svg" alt="Unity"><span class="skill-tooltip">Unity</span></div>
+        <div class="skill-logo"><img src="assets/skills/git-original.svg" alt="Git"><span class="skill-tooltip">Git</span></div>
+        <div class="skill-logo"><img src="assets/skills/github-original.svg" alt="GitHub Actions"><span class="skill-tooltip">GitHub Actions</span></div>
+        <div class="skill-logo"><img src="assets/skills/grpc.svg" alt="gRPC"><span class="skill-tooltip">gRPC</span></div>
+      </div>
     </div>
-
-    <!-- ───────── Cloud & DB ───────── -->
     <div class="skill-category">
-      <h3>Cloud&nbsp;&amp;&nbsp;Databases</h3>
-      <div class="skill-grid" id="cloud-skills"></div>
+      <h3>Cloud &amp; Databases</h3>
+      <div class="skill-grid">
+        <div class="skill-logo"><img src="assets/skills/amazonaws.svg" alt="AWS"><span class="skill-tooltip">AWS (Lambda, S3, Textract, Bedrock)</span></div>
+        <div class="skill-logo"><img src="assets/skills/firebase-plain.svg" alt="Firebase"><span class="skill-tooltip">Firebase</span></div>
+        <div class="skill-logo"><img src="assets/skills/mysql-original.svg" alt="MySQL"><span class="skill-tooltip">MySQL</span></div>
+        <div class="skill-logo"><img src="assets/skills/postgresql-original.svg" alt="Postgres"><span class="skill-tooltip">Postgres</span></div>
+        <div class="skill-logo"><img src="assets/skills/sqlite-original.svg" alt="SQLite"><span class="skill-tooltip">SQLite</span></div>
+      </div>
     </div>
-
-    <!-- ───────── AI / ML ───────── -->
     <div class="skill-category">
-      <h3>AI&nbsp;/&nbsp;ML</h3>
-      <div class="skill-grid" id="ml-skills"></div>
+      <h3>AI/ML</h3>
+      <div class="skill-grid">
+        <div class="skill-logo"><img src="assets/skills/langchain.svg" alt="LangChain"><span class="skill-tooltip">LangChain</span></div>
+        <div class="skill-logo"><img src="assets/skills/ollama.svg" alt="Ollama"><span class="skill-tooltip">Ollama</span></div>
+        <div class="skill-logo"><img src="assets/skills/tensorflow-original.svg" alt="TensorFlow"><span class="skill-tooltip">TensorFlow</span></div>
+        <div class="skill-logo"><img src="assets/skills/scikitlearn-original.svg" alt="scikit-learn"><span class="skill-tooltip">scikit-learn</span></div>
+        <div class="skill-logo"><img src="assets/skills/faiss.svg" alt="FAISS"><span class="skill-tooltip">FAISS</span></div>
+        <div class="skill-logo"><img src="assets/skills/huggingface.svg" alt="HuggingFace"><span class="skill-tooltip">HuggingFace</span></div>
+        <div class="skill-logo"><img src="assets/skills/sagemaker.svg" alt="SageMaker"><span class="skill-tooltip">SageMaker</span></div>
+      </div>
     </div>
-
-    <!-- ───────── Methods ───────── -->
     <div class="skill-category">
       <h3>Methods</h3>
-      <div class="skill-grid" id="method-skills"></div>
+      <div class="skill-grid">
+        <div class="skill-logo"><i class="fas fa-users"></i><span class="skill-tooltip">Agile</span></div>
+        <div class="skill-logo"><i class="fas fa-vial"></i><span class="skill-tooltip">TDD</span></div>
+        <div class="skill-logo"><i class="fas fa-user-check"></i><span class="skill-tooltip">User-Centered Design</span></div>
+        <div class="skill-logo"><i class="fas fa-sync-alt"></i><span class="skill-tooltip">CI/CD</span></div>
+      </div>
     </div>
-
   </div>
 </section>
 
