added skills logos

--- a/index.html
+++ b/index.html
@@ -47,71 +47,69 @@
 <section id="skills" class="snap fade">
   <h2>Skills&nbsp;&amp;&nbsp;Tools</h2>
 
-  <!-- reusable logo component -->
-  <template id="skill-template">
-    <div class="skill-logo" data-skill="0">
-      <img src="" alt="">
-      <span class="skill-tooltip"></span>
+  <!-- Languages -->
+  <div class="skill-category">
+    <h3>Languages</h3>
+    <div class="skill-grid">
+      <div class="skill-logo" data-skill="85"><img src="assets/skills/python-original.svg"       alt="Python"><span class="skill-tooltip">Python&nbsp;85%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/java-original.svg"         alt="Java"><span class="skill-tooltip">Java&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="80"><img src="assets/skills/javascript-original.svg"   alt="JavaScript"><span class="skill-tooltip">JavaScript&nbsp;80%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/c-original.svg"            alt="C"><span class="skill-tooltip">C&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="60"><img src="assets/skills/csharp-original.svg"       alt="C#"><span class="skill-tooltip">C#&nbsp;60%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/sqlite-original.svg"       alt="SQL"><span class="skill-tooltip">SQL&nbsp;75%</span></div>
     </div>
-  </template>
+  </div>
 
-  <!-- category wrapper -->
-  <div class="skills-categories">
-    <div class="skill-category">
-      <h3>Languages</h3>
-      <div class="skill-grid">
-        <div class="skill-logo"><img src="assets/skills/python-original.svg" alt="Python"><span class="skill-tooltip">Python</span></div>
-        <div class="skill-logo"><img src="assets/skills/java-original.svg" alt="Java"><span class="skill-tooltip">Java</span></div>
-        <div class="skill-logo"><img src="assets/skills/javascript-original.svg" alt="JavaScript"><span class="skill-tooltip">JavaScript</span></div>
-        <div class="skill-logo"><img src="assets/skills/c-original.svg" alt="C"><span class="skill-tooltip">C</span></div>
-        <div class="skill-logo"><img src="assets/skills/csharp-original.svg" alt="C#"><span class="skill-tooltip">C#</span></div>
-        <div class="skill-logo"><img src="assets/skills/sqlite-original.svg" alt="SQL"><span class="skill-tooltip">SQL</span></div>
-      </div>
+  <!-- Frameworks & Tools -->
+  <div class="skill-category">
+    <h3>Frameworks&nbsp;&amp;&nbsp;Tools</h3>
+    <div class="skill-grid">
+      <div class="skill-logo" data-skill="80"><img src="assets/skills/react-original.svg"        alt="React"><span class="skill-tooltip">React&nbsp;80%</span></div>
+      <div class="skill-logo" data-skill="78"><img src="assets/skills/react-original.svg"        alt="React Native"><span class="skill-tooltip">React&nbsp;Native&nbsp;78%</span></div>
+      <div class="skill-logo" data-skill="55"><img src="assets/skills/angular.svg"               alt="Angular"><span class="skill-tooltip">Angular&nbsp;55%</span></div>
+      <div class="skill-logo" data-skill="78"><img src="assets/skills/flask-original.svg"        alt="Flask"><span class="skill-tooltip">Flask&nbsp;78%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/docker-original.svg"       alt="Docker"><span class="skill-tooltip">Docker&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/unity-original.svg"        alt="Unity"><span class="skill-tooltip">Unity&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="85"><img src="assets/skills/git-original.svg"          alt="Git"><span class="skill-tooltip">Git&nbsp;85%</span></div>
+      <div class="skill-logo" data-skill="70"><img src="assets/skills/github-original.svg"       alt="GitHub Actions"><span class="skill-tooltip">GitHub&nbsp;Actions&nbsp;70%</span></div>
+      <div class="skill-logo" data-skill="55"><img src="assets/skills/grpc.svg"                  alt="gRPC"><span class="skill-tooltip">gRPC&nbsp;55%</span></div>
     </div>
-    <div class="skill-category">
-      <h3>Frameworks &amp; Tools</h3>
-      <div class="skill-grid">
-        <div class="skill-logo"><img src="assets/skills/react-original.svg" alt="React"><span class="skill-tooltip">React</span></div>
-        <div class="skill-logo"><img src="assets/skills/react-original.svg" alt="React Native"><span class="skill-tooltip">React Native</span></div>
-        <div class="skill-logo"><img src="assets/skills/angular.svg" alt="Angular"><span class="skill-tooltip">Angular</span></div>
-        <div class="skill-logo"><img src="assets/skills/flask-original.svg" alt="Flask"><span class="skill-tooltip">Flask</span></div>
-        <div class="skill-logo"><img src="assets/skills/docker-original.svg" alt="Docker"><span class="skill-tooltip">Docker</span></div>
-        <div class="skill-logo"><img src="assets/skills/unity-original.svg" alt="Unity"><span class="skill-tooltip">Unity</span></div>
-        <div class="skill-logo"><img src="assets/skills/git-original.svg" alt="Git"><span class="skill-tooltip">Git</span></div>
-        <div class="skill-logo"><img src="assets/skills/github-original.svg" alt="GitHub Actions"><span class="skill-tooltip">GitHub Actions</span></div>
-        <div class="skill-logo"><img src="assets/skills/grpc.svg" alt="gRPC"><span class="skill-tooltip">gRPC</span></div>
-      </div>
+  </div>
+
+  <!-- Cloud & Databases -->
+  <div class="skill-category">
+    <h3>Cloud&nbsp;&amp;&nbsp;Databases</h3>
+    <div class="skill-grid">
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/amazonaws.svg"             alt="AWS"><span class="skill-tooltip">AWS&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/firebase-plain.svg"        alt="Firebase"><span class="skill-tooltip">Firebase&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="80"><img src="assets/skills/mysql-original.svg"        alt="MySQL"><span class="skill-tooltip">MySQL&nbsp;80%</span></div>
+      <div class="skill-logo" data-skill="70"><img src="assets/skills/postgresql-original.svg"   alt="PostgreSQL"><span class="skill-tooltip">PostgreSQL&nbsp;70%</span></div>
+      <div class="skill-logo" data-skill="70"><img src="assets/skills/sqlite-original.svg"       alt="SQLite"><span class="skill-tooltip">SQLite&nbsp;70%</span></div>
     </div>
-    <div class="skill-category">
-      <h3>Cloud &amp; Databases</h3>
-      <div class="skill-grid">
-        <div class="skill-logo"><img src="assets/skills/amazonaws.svg" alt="AWS"><span class="skill-tooltip">AWS (Lambda, S3, Textract, Bedrock)</span></div>
-        <div class="skill-logo"><img src="assets/skills/firebase-plain.svg" alt="Firebase"><span class="skill-tooltip">Firebase</span></div>
-        <div class="skill-logo"><img src="assets/skills/mysql-original.svg" alt="MySQL"><span class="skill-tooltip">MySQL</span></div>
-        <div class="skill-logo"><img src="assets/skills/postgresql-original.svg" alt="Postgres"><span class="skill-tooltip">Postgres</span></div>
-        <div class="skill-logo"><img src="assets/skills/sqlite-original.svg" alt="SQLite"><span class="skill-tooltip">SQLite</span></div>
-      </div>
+  </div>
+
+  <!-- AI / ML -->
+  <div class="skill-category">
+    <h3>AI&nbsp;/&nbsp;ML</h3>
+    <div class="skill-grid">
+      <div class="skill-logo" data-skill="70"><img src="assets/skills/langchain.svg"             alt="LangChain"><span class="skill-tooltip">LangChain&nbsp;70%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/ollama.svg"                alt="Ollama"><span class="skill-tooltip">Ollama&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="60"><img src="assets/skills/tensorflow-original.svg"   alt="TensorFlow"><span class="skill-tooltip">TensorFlow&nbsp;60%</span></div>
+      <div class="skill-logo" data-skill="70"><img src="assets/skills/scikitlearn-original.svg"  alt="scikit-learn"><span class="skill-tooltip">scikit-learn&nbsp;70%</span></div>
+      <div class="skill-logo" data-skill="60"><img src="assets/skills/faiss.svg"                 alt="FAISS"><span class="skill-tooltip">FAISS&nbsp;60%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/huggingface.svg"           alt="HuggingFace"><span class="skill-tooltip">HuggingFace&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/sagemaker.svg"             alt="SageMaker"><span class="skill-tooltip">SageMaker&nbsp;65%</span></div>
     </div>
-    <div class="skill-category">
-      <h3>AI/ML</h3>
-      <div class="skill-grid">
-        <div class="skill-logo"><img src="assets/skills/langchain.svg" alt="LangChain"><span class="skill-tooltip">LangChain</span></div>
-        <div class="skill-logo"><img src="assets/skills/ollama.svg" alt="Ollama"><span class="skill-tooltip">Ollama</span></div>
-        <div class="skill-logo"><img src="assets/skills/tensorflow-original.svg" alt="TensorFlow"><span class="skill-tooltip">TensorFlow</span></div>
-        <div class="skill-logo"><img src="assets/skills/scikitlearn-original.svg" alt="scikit-learn"><span class="skill-tooltip">scikit-learn</span></div>
-        <div class="skill-logo"><img src="assets/skills/faiss.svg" alt="FAISS"><span class="skill-tooltip">FAISS</span></div>
-        <div class="skill-logo"><img src="assets/skills/huggingface.svg" alt="HuggingFace"><span class="skill-tooltip">HuggingFace</span></div>
-        <div class="skill-logo"><img src="assets/skills/sagemaker.svg" alt="SageMaker"><span class="skill-tooltip">SageMaker</span></div>
-      </div>
-    </div>
-    <div class="skill-category">
-      <h3>Methods</h3>
-      <div class="skill-grid">
-        <div class="skill-logo"><i class="fas fa-users"></i><span class="skill-tooltip">Agile</span></div>
-        <div class="skill-logo"><i class="fas fa-vial"></i><span class="skill-tooltip">TDD</span></div>
-        <div class="skill-logo"><i class="fas fa-user-check"></i><span class="skill-tooltip">User-Centered Design</span></div>
-        <div class="skill-logo"><i class="fas fa-sync-alt"></i><span class="skill-tooltip">CI/CD</span></div>
-      </div>
+  </div>
+
+  <!-- Methods -->
+  <div class="skill-category">
+    <h3>Methods</h3>
+    <div class="skill-grid">
+      <div class="skill-logo" data-skill="90"><i class="fas fa-users"></i><span class="skill-tooltip">Agile&nbsp;90%</span></div>
+      <div class="skill-logo" data-skill="70"><i class="fas fa-vial"></i><span class="skill-tooltip">TDD&nbsp;70%</span></div>
+      <div class="skill-logo" data-skill="75"><i class="fas fa-user-check"></i><span class="skill-tooltip">User-Centred&nbsp;Design&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="80"><i class="fas fa-sync-alt"></i><span class="skill-tooltip">CI/CD&nbsp;80%</span></div>
     </div>
   </div>
 </section>
