added skills faiss and hugging face tc logos

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     <div class="skill-grid">
       <div class="skill-logo" data-skill="80"><img src="assets/skills/react-original.svg"        alt="React"><span class="skill-tooltip">React&nbsp;80%</span></div>
       <div class="skill-logo" data-skill="78"><img src="assets/skills/react-original.svg"        alt="React Native"><span class="skill-tooltip">React&nbsp;Native&nbsp;78%</span></div>
-      <div class="skill-logo" data-skill="55"><img src="assets/skills/angular.svg"               alt="Angular"><span class="skill-tooltip">Angular&nbsp;55%</span></div>
-      <div class="skill-logo" data-skill="78"><img src="assets/skills/flask-original.svg"        alt="Flask"><span class="skill-tooltip">Flask&nbsp;78%</span></div>
+      <div class="skill-logo" data-skill="55"><img src="assets/skills/angular-framework-logo-red-white-shield-icon-modern-design-1.png"               alt="Angular"><span class="skill-tooltip">Angular&nbsp;55%</span></div>
+      <div class="skill-logo" data-skill="78"><img src="assets/skills/flask.png"        alt="Flask"><span class="skill-tooltip">Flask&nbsp;78%</span></div>
       <div class="skill-logo" data-skill="75"><img src="assets/skills/docker-original.svg"       alt="Docker"><span class="skill-tooltip">Docker&nbsp;75%</span></div>
       <div class="skill-logo" data-skill="65"><img src="assets/skills/unity-original.svg"        alt="Unity"><span class="skill-tooltip">Unity&nbsp;65%</span></div>
       <div class="skill-logo" data-skill="85"><img src="assets/skills/git-original.svg"          alt="Git"><span class="skill-tooltip">Git&nbsp;85%</span></div>
       <div class="skill-logo" data-skill="70"><img src="assets/skills/github-original.svg"       alt="GitHub Actions"><span class="skill-tooltip">GitHub&nbsp;Actions&nbsp;70%</span></div>
-      <div class="skill-logo" data-skill="55"><img src="assets/skills/grpc.svg"                  alt="gRPC"><span class="skill-tooltip">gRPC&nbsp;55%</span></div>
+      <div class="skill-logo" data-skill="55"><img src="assets/skills/grpc-logo-png_seeklogo-430953.png"                  alt="gRPC"><span class="skill-tooltip">gRPC&nbsp;55%</span></div>
     </div>
   </div>
 
@@ -80,7 +80,7 @@
   <div class="skill-category">
     <h3>Cloud&nbsp;&amp;&nbsp;Databases</h3>
     <div class="skill-grid">
-      <div class="skill-logo" data-skill="75"><img src="assets/skills/amazonaws.svg"             alt="AWS"><span class="skill-tooltip">AWS&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/Amazon-Web-Services-AWS-Logo.png"             alt="AWS"><span class="skill-tooltip">AWS&nbsp;75%</span></div>
       <div class="skill-logo" data-skill="65"><img src="assets/skills/firebase-plain.svg"        alt="Firebase"><span class="skill-tooltip">Firebase&nbsp;65%</span></div>
       <div class="skill-logo" data-skill="80"><img src="assets/skills/mysql-original.svg"        alt="MySQL"><span class="skill-tooltip">MySQL&nbsp;80%</span></div>
       <div class="skill-logo" data-skill="70"><img src="assets/skills/postgresql-original.svg"   alt="PostgreSQL"><span class="skill-tooltip">PostgreSQL&nbsp;70%</span></div>
@@ -92,13 +92,13 @@
   <div class="skill-category">
     <h3>AI&nbsp;/&nbsp;ML</h3>
     <div class="skill-grid">
-      <div class="skill-logo" data-skill="70"><img src="assets/skills/langchain.svg"             alt="LangChain"><span class="skill-tooltip">LangChain&nbsp;70%</span></div>
-      <div class="skill-logo" data-skill="65"><img src="assets/skills/ollama.svg"                alt="Ollama"><span class="skill-tooltip">Ollama&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="70"><img src="assets/skills/langchain.png"             alt="LangChain"><span class="skill-tooltip">LangChain&nbsp;70%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/ollama-logo-png_seeklogo-593420.png"                alt="Ollama"><span class="skill-tooltip">Ollama&nbsp;65%</span></div>
       <div class="skill-logo" data-skill="60"><img src="assets/skills/tensorflow-original.svg"   alt="TensorFlow"><span class="skill-tooltip">TensorFlow&nbsp;60%</span></div>
       <div class="skill-logo" data-skill="70"><img src="assets/skills/scikitlearn-original.svg"  alt="scikit-learn"><span class="skill-tooltip">scikit-learn&nbsp;70%</span></div>
-      <div class="skill-logo" data-skill="60"><img src="assets/skills/faiss.svg"                 alt="FAISS"><span class="skill-tooltip">FAISS&nbsp;60%</span></div>
-      <div class="skill-logo" data-skill="75"><img src="assets/skills/huggingface.svg"           alt="HuggingFace"><span class="skill-tooltip">HuggingFace&nbsp;75%</span></div>
-      <div class="skill-logo" data-skill="65"><img src="assets/skills/sagemaker.svg"             alt="SageMaker"><span class="skill-tooltip">SageMaker&nbsp;65%</span></div>
+      <div class="skill-logo" data-skill="60"><img src="assets/skills/FAISS.png"                 alt="FAISS"><span class="skill-tooltip">FAISS&nbsp;60%</span></div>
+      <div class="skill-logo" data-skill="75"><img src="assets/skills/huggingface-color.png"           alt="HuggingFace"><span class="skill-tooltip">HuggingFace&nbsp;75%</span></div>
+      <div class="skill-logo" data-skill="65"><img src="assets/skills/Sagemaker.png"             alt="SageMaker"><span class="skill-tooltip">SageMaker&nbsp;65%</span></div>
     </div>
   </div>
 
