added project placeholders

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <h2>Projects</h2>
     <div class="proj-grid">
       <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/proposal_scanner_prototype','_blank')">
-        <img src="assets/proposal_scanner_thumb.jpg" alt="Proposal Scanner">
+        <img src="assets/placeholder_court_proposal_scanne.png" alt="Proposal Scanner">
         <div class="proj-info">
           <h3>Proposal Scanner Prototype</h3>
           <p>AI-powered document scanner using OCR, AWS Textract, FAISS, and LLM summarization for hybrid structured/unstructured document analysis. Supports S3/local, highlights fields, and logs scan history.</p>
@@ -199,7 +199,7 @@
         <span class="hover-msg">View&nbsp;Repo</span>
       </div>
       <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/solo-leveling-task-app','_blank')">
-        <img src="assets/solo_leveling_thumb.jpg" alt="Solo Leveling Task App">
+        <img src="assets/placeholder_solo_leveling_task_app.png" alt="Solo Leveling Task App">
         <div class="proj-info">
           <h3>Solo Leveling Task App</h3>
           <p>Gamified productivity app with React Native/Flask, daily AI-generated quests, XP/streak tracking, and LangChain+Ollama quest suggestions. Animated UI, streak rewards, and local persistence.</p>
@@ -207,7 +207,7 @@
         <span class="hover-msg">View&nbsp;Repo</span>
       </div>
       <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/court-deadline-tracker','_blank')">
-        <img src="assets/court_deadline_thumb.jpg" alt="Court Deadline Tracker">
+        <img src="assets/placeholder_court_deadline_tracker.png" alt="Court Deadline Tracker">
         <div class="proj-info">
           <h3>Court Deadline Tracker</h3>
           <p>Legal productivity tool (Flask/React) for attorneys to track/manage court deadlines with natural language input, Google Calendar sync, NER/AI parsing, and real-time alerts.</p>
@@ -215,7 +215,7 @@
         <span class="hover-msg">View&nbsp;Repo</span>
       </div>
       <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/Pomodoro','_blank')">
-        <img src="assets/pomodoro_thumb.jpg" alt="Pomodoro Timer">
+        <img src="assets/pomodoro_timer.png" alt="Pomodoro Timer">
         <div class="proj-info">
           <h3>Pomodoro Timer with Motivation</h3>
           <p>React/Flask Pomodoro timer with animated running character, motivational texts, and creative UI/UX for productivity and focus.</p>
@@ -223,7 +223,7 @@
         <span class="hover-msg">View&nbsp;Repo</span>
       </div>
       <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/Clothing-assistant','_blank')">
-        <img src="assets/clothing_assistant_thumb.jpg" alt="Clothing Consulting Robot">
+        <img src="assets/placeholder_clothing_consulting_robot.png" alt="Clothing Consulting Robot">
         <div class="proj-info">
           <h3>Clothing Consulting Robot</h3>
           <p>UiPath/web automation system for weather-based clothing suggestions. Scrapes real-time weather and suggests attire using logic and automation.</p>
@@ -231,7 +231,7 @@
         <span class="hover-msg">View&nbsp;Repo</span>
       </div>
       <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/PR-Tracker','_blank')">
-        <img src="assets/fitness_tracker_thumb.jpg" alt="Fitness Tracker App">
+        <img src="assets/placeholder_fitness.png" alt="Fitness Tracker App">
         <div class="proj-info">
           <h3>Fitness Tracker App</h3>
           <p>Full-stack fitness tracking app (React/Flask/MySQL) with RESTful APIs, dynamic dashboard, and Dockerized deployment for scalability.</p>
@@ -239,7 +239,7 @@
         <span class="hover-msg">View&nbsp;Repo</span>
       </div>
       <div class="proj-card" onclick="window.open('https://github.com/saianeesh01/VideoGameStore','_blank')">
-        <img src="assets/videogame_store_thumb.jpg" alt="Video Game Store Web Application">
+        <img src="assets/placeholder_videogamestore.png" alt="Video Game Store Web Application">
         <div class="proj-info">
           <h3>Video Game Store Web Application</h3>
           <p>Full-stack eCommerce platform (HTML/CSS/JS, PHP/MySQL) for browsing, purchasing, and reviewing games. Responsive design, Dockerized, and version controlled.</p>
@@ -247,7 +247,7 @@
         <span class="hover-msg">View&nbsp;Repo</span>
       </div>
       <div class="proj-card" onclick="window.open('https://aneesh-m.itch.io/venom-run','_blank')">
-        <img src="assets/venom_run_thumb.jpg" alt="Venom Run">
+        <img src="assets/venom_running.png" alt="Venom Run">
         <div class="proj-info">
           <h3>Venom Run</h3>
           <p>Unity/C# endless runner with symbiote theme, tight movement, reactive enemies, and layered parallax backgrounds. Creative deep dive into fast-paced level design.</p>
@@ -255,7 +255,7 @@
         <span class="hover-msg">Click to Play</span>
       </div>
       <div class="proj-card" onclick="window.open('https://aneesh-m.itch.io/pro','_blank')">
-        <img src="assets/projectiles_thumb.jpg" alt="Projectiles">
+        <img src="assets/projectiles_placeholder.png" alt="Projectiles">
         <div class="proj-info">
           <h3>Projectiles</h3>
           <p>2D sprite-based fighting game (Unity/C#) with pop culture characters, animated attacks, and arcade-style combat systems.</p>
@@ -263,7 +263,7 @@
         <span class="hover-msg">Click to Play</span>
       </div>
       <div class="proj-card" onclick="window.open('https://aneesh-m.itch.io/flash-run-2','_blank')">
-        <img src="assets/flash_run2_thumb.jpg" alt="Flash Run 2">
+        <img src="assets/flash_run2_placeholder .png" alt="Flash Run 2">
         <div class="proj-info">
           <h3>Flash Run 2</h3>
           <p>Sequel to Flash Run: smoother animations, smarter enemies, cinematic VFX, and progressive difficulty. Optimized C# scripts and frame-perfect transitions.</p>
@@ -271,7 +271,7 @@
         <span class="hover-msg">Click to Play</span>
       </div>
       <div class="proj-card" onclick="window.open('https://aneesh-m.itch.io/flash-run','_blank')">
-        <img src="assets/flash_run_thumb.jpg" alt="Flash Run">
+        <img src="assets/flash_run_placeholder.png" alt="Flash Run">
         <div class="proj-info">
           <h3>Flash Run</h3>
           <p>My first programming project: 2D endless runner (Unity/C#) inspired by The Flash and Mega Man. Hand-animated sprites, hit detection, and game logic.</p>
